// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetricTransposition transposition should transpose single metric 1`] = `
Object {
  "headers": Array [
    Object {
      "id": "metricNames",
      "metrics": Array [
        Object {
          "header": Object {
            "format": "#,##0",
            "id": "a8908b3c92b6743b1fc71c8b113533bc",
            "title": "# of Accounts",
            "type": "metric",
          },
          "index": 0,
        },
      ],
      "title": "Metric",
      "type": "attrLabel",
      "uri": "/metricGroup",
    },
    Object {
      "format": "#,##0",
      "id": "metricValues",
      "title": "# of Accounts",
      "type": "metric",
      "uri": "/metricValues",
    },
  ],
  "rawData": Array [
    Array [
      Object {
        "id": "a8908b3c92b6743b1fc71c8b113533bc",
        "identifier": "",
        "uri": "",
        "value": "# of Accounts",
      },
      Object {
        "format": "#,##0",
        "marker": Object {
          "enabled": true,
        },
        "y": 118,
      },
    ],
  ],
}
`;

exports[`MetricTransposition transposition should transpose single metric sliced by attribute 1`] = `
Object {
  "headers": Array [
    Object {
      "id": "label.projectgroup.stage",
      "title": "Stage",
      "type": "attrLabel",
      "uri": "/gdc/md/budtwmhq7k94ve7rqj49j3620rzsm3u1/obj/2135",
    },
    Object {
      "id": "metricNames",
      "metrics": Array [
        Object {
          "header": Object {
            "format": "#,##0",
            "id": "a8908b3c92b6743b1fc71c8b113533bc",
            "title": "# of Accounts",
            "type": "metric",
          },
          "index": 1,
        },
      ],
      "title": "Metric",
      "type": "attrLabel",
      "uri": "/metricGroup",
    },
    Object {
      "format": "#,##0",
      "id": "metricValues",
      "title": "# of Accounts",
      "type": "metric",
      "uri": "/metricValues",
    },
  ],
  "rawData": Array [
    Array [
      Object {
        "id": "1",
        "identifier": "label.projectgroup.stage",
        "uri": "/gdc/md/budtwmhq7k94ve7rqj49j3620rzsm3u1/obj/2135",
        "value": "",
      },
      Object {
        "id": "a8908b3c92b6743b1fc71c8b113533bc",
        "identifier": "",
        "uri": "",
        "value": "# of Accounts",
      },
      Object {
        "format": "#,##0",
        "marker": Object {
          "enabled": true,
        },
        "y": 1,
      },
    ],
    Array [
      Object {
        "id": "321199",
        "identifier": "label.projectgroup.stage",
        "uri": "/gdc/md/budtwmhq7k94ve7rqj49j3620rzsm3u1/obj/2135",
        "value": "Churned",
      },
      Object {
        "id": "a8908b3c92b6743b1fc71c8b113533bc",
        "identifier": "",
        "uri": "",
        "value": "# of Accounts",
      },
      Object {
        "format": "#,##0",
        "marker": Object {
          "enabled": true,
        },
        "y": 25,
      },
    ],
    Array [
      Object {
        "id": "2288",
        "identifier": "label.projectgroup.stage",
        "uri": "/gdc/md/budtwmhq7k94ve7rqj49j3620rzsm3u1/obj/2135",
        "value": "N/A",
      },
      Object {
        "id": "a8908b3c92b6743b1fc71c8b113533bc",
        "identifier": "",
        "uri": "",
        "value": "# of Accounts",
      },
      Object {
        "format": "#,##0",
        "marker": Object {
          "enabled": true,
        },
        "y": 1,
      },
    ],
    Array [
      Object {
        "id": "321198",
        "identifier": "label.projectgroup.stage",
        "uri": "/gdc/md/budtwmhq7k94ve7rqj49j3620rzsm3u1/obj/2135",
        "value": "OK",
      },
      Object {
        "id": "a8908b3c92b6743b1fc71c8b113533bc",
        "identifier": "",
        "uri": "",
        "value": "# of Accounts",
      },
      Object {
        "format": "#,##0",
        "marker": Object {
          "enabled": true,
        },
        "y": 153,
      },
    ],
    Array [
      Object {
        "id": "321216",
        "identifier": "label.projectgroup.stage",
        "uri": "/gdc/md/budtwmhq7k94ve7rqj49j3620rzsm3u1/obj/2135",
        "value": "Potentially Churned / Salesforce Issues",
      },
      Object {
        "id": "a8908b3c92b6743b1fc71c8b113533bc",
        "identifier": "",
        "uri": "",
        "value": "# of Accounts",
      },
      Object {
        "format": "#,##0",
        "marker": Object {
          "enabled": true,
        },
        "y": 27,
      },
    ],
  ],
}
`;
